<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- Ansicht -->
    <item android:title="@string/menu_view">
        <menu>
            <item
                android:id="@+id/menu_training"
                android:title="@string/menu_training"
                android:icon="@drawable/ic_training" />
            <item
                android:id="@+id/menu_exercises"
                android:title="@string/menu_exercises"
                android:icon="@drawable/ic_exercises" />
            <item
                android:id="@+id/menu_muscles"
                android:title="@string/menu_muscles"
                android:icon="@drawable/ic_muscles" />
        </menu>
    </item>

    <!-- Training -->
    <item android:title="@string/menu_training">
        <menu>
            <item
                android:id="@+id/menu_create_training"
                android:title="@string/menu_create_training"
                android:icon="@drawable/ic_add" />
            <item
                android:id="@+id/menu_delete_training"
                android:title="@string/menu_delete_training"
                android:icon="@drawable/ic_delete" />
        </menu>
    </item>

    <!-- Daten -->
    <item android:title="@string/menu_data">
        <menu>
            <item
                android:id="@+id/menu_add_demo"
                android:title="@string/menu_add_demo"
                android:icon="@drawable/ic_demo" />
            <item
                android:id="@+id/menu_import_xml"
                android:title="@string/menu_import_xml"
                android:icon="@drawable/ic_import"
                app:showAsAction="never" />
            <item
                android:id="@+id/menu_export_xml"
                android:title="@string/menu_export_xml"
                android:icon="@drawable/ic_export"
                app:showAsAction="never" />
            <item
                android:id="@+id/menu_delete_all"
                android:title="@string/menu_delete_all"
                android:icon="@drawable/ic_delete_all" />

        </menu>
    </item>

</menu>
